# thekenwhite

./: .gitignore  Cargo.toml  README.md  _.code-workspace  clean.sh  commit.sh  config.sh  cpush.sh  csync.sh  init.sh  repair.sh  reset.sh  setup.sh  sortspec.md
.obsidian/: .gitignore  app.json  community-plugins.json  core-plugins.json  templates.json
.obsidian/plugins/better-markdown-links/: data.json  main.js
.obsidian/plugins/css-editor/: main.js
.obsidian/plugins/custom-font-loader/: data.json
.obsidian/plugins/custom-sort/: data.json
.obsidian/plugins/folder-notes/: data.json
.obsidian/settings/: sortspec.md
.obsidian/snippets/: breadcrumb.css  breadcrumbs.css  heading.css  headings.css  hyperlink.css  hyperlinks.css  table.css
.projects/c/: CMakeLists.txt  clean.sh
.projects/c/.cmake/: .gitignore
.projects/c/inc/: _.h
.projects/c/lib/: .gitignore
.projects/c/src/: _.c  hello.c
.projects/cargo/: Cargo.toml
.projects/cargo_cmake/: CMakeLists.txt  Cargo.toml  build.rs
.projects/cc/: CMakeLists.txt  setup.sh
.projects/cc/inc/: _.h
.projects/cc/mod/: _.cc  type.cc
.projects/cc/src/: _.cc
.projects/cmake/: CMakeLists.txt  clean.sh  rebuild.sh
.projects/cmake-c/: CMakeLists.txt  cmake.sh
.projects/cmake-c/.cmake/: config.cmake
.projects/cmake-c/lib/: _.c
.projects/cmake-cc/: CMakeLists.txt  rebuild.sh
.projects/cmake-cc/lib/: _.cc
.projects/cmake-cc/mod/: _.cc
.projects/cmake/.cmake/: config.cmake
.projects/cmake/inc/cc/: _.h
.projects/cmake/lib/c/: _.c
.projects/cmake/lib/cc/: _.cc
.projects/cmake/mod/: _.cc
.projects/cmake_cargo/: CMakeLists.txt  Cargo.toml  cmake.sh  rebuild.sh
.projects/docker-rs/: Dockerfile
.scripts/sh/: clang++.sh  clang.sh  g++.sh  gcc.sh  rustc.sh
.snippets/c/: _.c
.snippets/cc/: _.cc
.snippets/rs/: _.rs
0_the-red-pill-series/: 0_the-red-pill-series.md
0_the-red-pill-series/0_anti-natalism/: 0_anti-natalism.md
0_the-red-pill-series/1_the-fiat-currency/: 1_the-fiat-currency.md
0_the-red-pill-series/2_the-bitcoin-currency/: 2_the-bitcoin-currency.md
0_the-red-pill-series/3_e-book-reader/: 3_e-book-reader.md
0_the-red-pill-series/4_the-digital-reality/: 4_the-digital-reality.md
0_the-red-pill-series/5_the-physical-reality/: 5_the-physical-reality.md
0_the-red-pill-series/6_the-life-and-death-problem/: 6_the-life-and-death-problem.md
0_the-red-pill-series/7_the-human-relationship/: 7_the-human-relationship.md
0_the-red-pill-series/8_the-red-pill/: 8_the-red-pill.md
0_the-red-pill-series/9_the-suicide/: 9_the-suicide.md
1_the-better-life-guide/: 1_the-better-life-guide.md
1_the-better-life-guide/0_introduction/: 0_introduction.md
1_the-better-life-guide/1_the-bitcoin-setup/: 1_the-bitcoin-setup.md
1_the-better-life-guide/2_the-digital-setup/: 2_the-digital-setup.md
1_the-better-life-guide/3_the-artificial-intelligence/: 3_the-artificial-intelligence.md
1_the-better-life-guide/4_the-physical-setup/: 4_the-physical-setup.md
1_the-better-life-guide/5_the-mental-setup/: 5_the-mental-setup.md
1_the-better-life-guide/6_the-physical-knowledge/: 6_the-physical-knowledge.md
1_the-better-life-guide/7_the-logical-knowledge/: 7_the-logical-knowledge.md
1_the-better-life-guide/8_the-politics/: 8_the-politics.md
1_the-better-life-guide/9_the-freedom/: 9_the-freedom.md
2_the-human-relationship/: 2_the-human-relationship.md
2_the-human-relationship/0_the-uncertainty/: 0_the-uncertainty.md
2_the-human-relationship/1_the-tension/: 1_the-tension.md
2_the-human-relationship/2_the-good-and-bad/: 2_the-good-and-bad.md
2_the-human-relationship/3_the-sex-appeal/: 3_the-sex-appeal.md
2_the-human-relationship/4_the-sex/: 4_the-sex.md
2_the-human-relationship/5_the-separation/: 5_the-separation.md
2_the-human-relationship/6_the-needs/: 6_the-needs.md
2_the-human-relationship/7_the-money/: 7_the-money.md
2_the-human-relationship/8_the-pressure/: 8_the-pressure.md
2_the-human-relationship/9_the-broadness/: 9_the-broadness.md
3_the-computer-programming/: 3_the-computer-programming.md
3_the-computer-programming/0_outline/: 0_outline.md
3_the-computer-programming/1_programming-language/: 1_programming-language.md
3_the-computer-programming/2_the-c-programming-language/: 2_the-c-programming-language.md
3_the-computer-programming/3_the-cc-programming-language/: 3_the-cc-programming-language.md
3_the-computer-programming/4_the-rs-programming-language/: 4_the-rs-programming-language.md
_projects/: _projects.md
_scripts/: _scripts.md
_snippets/: _snippets.md
korean-nationalism/: korean-nationalism.md
projects/: projects.md
projects/cargo/: cargo.md
projects/cargo_cmake/: cargo_cmake.md
projects/cmake/: cmake.md
projects/cmake-c/: cmake-c.md
projects/cmake-cc/: cmake-cc.md
torrix/: torrix.md
torrix-system/: torrix-system.md
(+24 files in other folders)
